# RM_UTILS

./: .gitignore  LICENSE  README.MD  makefile  pyproject.toml
docs/: DEVELOPMENT.md
examples/: reporter.ipynb  usage_examples.ipynb  usage_examples_old.ipynb
examples/data/: report.xlsx
rm_utils/metrics/: __init__.py  calculator.py  metric_funcs.py
rm_utils/psi/: __init__.py  stability.py
rm_utils/reports/: __init__.py  reporter.py
rm_utils/sql/: db_connectors.py
