[project]
name = "rm-utils"
version = "1.0.1"
description = ""
authors = [
    {name = "n-emelianov",email = "limbolume2023@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "sqlparse (>=0.5.5,<0.6.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "clickhouse-connect (>=0.10.0,<0.11.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.setuptools]
packages = ["rm_utils"]
